--- a/pomodoro.html
+++ b/pomodoro.html
@@ -12,104 +12,64 @@
             background-attachment: fixed;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
         }
 
         .container {
             display: flex;
-            width: 80%;
-            gap: 40px;
+            flex-direction: column;
+            align-items: center;
+            width: 90%;
+            margin: 20px auto;
         }
 
-        .profile {
+        .row {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .pomodoro, .timeline, .section {
             flex: 1;
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
-            display: flex;
-            flex-direction: column;
+        }
+
+        .pomodoro {
             align-items: center;
-            position: relative;
         }
 
-        .profile img {
-            width: 120px;
-            height: 120px;
+        .progress-circle {
+            position: relative;
+            width: 200px;
+            height: 200px;
             border-radius: 50%;
-            object-fit: cover;
-            margin-bottom: 10px;
-            cursor: pointer;
+            background: conic-gradient(#D9B1BD 0% 50%, #e0e0e0 50% 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        .profile h2 {
-            margin: 10px 0;
-        }
-
-        .dynamic-section {
-            width: 100%;
-            margin-top: 20px;
-        }
-
-        .dynamic {
-            background: rgba(230, 230, 230, 0.9);
-            padding: 15px;
-            margin-bottom: 10px;
-            border-radius: 5px;
-            position: relative;
-        }
-
-        .dynamic button {
+        .progress-circle span {
             position: absolute;
-            top: 10px;
-            right: 10px;
-            background: #a03a53;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 5px;
-            cursor: pointer;
+            font-size: 2em;
+            font-weight: bold;
         }
 
-        .dynamic button:hover {
-            background: #D9B1BD;
-        }
-
-        .comment-section {
-            margin-top: 10px;
-            background: #f5f5f5;
-            padding: 10px;
-            border-radius: 5px;
-        }
-
-        .comment-section button {
-            margin-left: 10px;
-        }
-
-        .music-player {
+        .controls {
             margin-top: 20px;
-            text-align: center;
-        }
-
-        textarea {
-            width: 100%;
-            height: 60px;
-            margin-top: 10px;
-            padding: 10px;
-            border-radius: 5px;
-            border: none;
-            resize: none;
-            font-size: 1em;
+            display: flex;
+            gap: 10px;
         }
 
         button {
+            padding: 10px 20px;
             background-color: #D9B1BD;
             color: white;
             border: none;
             border-radius: 5px;
-            padding: 10px;
             cursor: pointer;
         }
 
@@ -117,208 +77,236 @@
             background-color: #a03a53;
         }
 
-        /* 索引样式 */
+        .timeline {
+            height: 300px;
+            overflow-y: auto;
+        }
+
+        .section {
+            height: 300px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        /* 右侧居中索引 */
         .index {
             position: fixed;
+            right: 20px;
             top: 50%;
-            right: 10px;
             transform: translateY(-50%);
-            background: rgba(255, 255, 255, 0.8);
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
 
         .index a {
-            display: block;
-            margin: 10px 0;
+            padding: 10px 15px;
+            background-color: #D9B1BD;
+            color: white;
             text-decoration: none;
-            color: #333;
-            font-size: 1em;
+            border-radius: 5px;
             text-align: center;
         }
 
         .index a:hover {
-            color: #7b2a3f;
+            background-color: #a03a53;
         }
-    </style>
-</head>
-<body>
-     /* 索引样式 */
-        .index {
+
+        /* 动态特效 */
+        .sparkle {
             position: fixed;
-            top: 50%;
-            right: 10px;
-            transform: translateY(-50%);
-            background: rgba(255, 255, 255, 0.8);
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            top: -50px;
+            width: 20px;
+            height: 20px;
+            background: rgba(255, 223, 0, 0.8);
+            border-radius: 50%;
+            box-shadow: 0 0 10px rgba(255, 223, 0, 0.8);
+            animation: fall 2s ease-in-out forwards;
         }
 
-        .index a {
-            display: block;
-            margin: 10px 0;
-            text-decoration: none;
-            color: #333;
-            font-size: 1em;
-            text-align: center;
-        }
-
-        .index a:hover {
-            color: #7b2a3f;
+        @keyframes fall {
+            0% {
+                transform: translateY(0) translateX(0);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(800px) translateX(200px);
+                opacity: 0;
+            }
         }
     </style>
 </head>
 <body>
-    <!-- 索引 -->
-    <div class="index">
-        <a href="timeline.html">时间线</a>
-        <a href="pomodoro.html">番茄钟</a>
-        <a href="notebook.html">记事本</a>
+    <div class="container">
+        <div class="row">
+            <!-- 番茄钟 -->
+            <div class="pomodoro">
+                <h2>番茄钟</h2>
+                <div class="progress-circle" id="progress">
+                    <span id="timer">25:00</span>
+                </div>
+                <div class="controls">
+                    <input type="number" id="customTime" placeholder="分钟数" min="1" max="60">
+                    <button onclick="setCustomTime()">设置时间</button>
+                    <button onclick="startTimer()">开始</button>
+                    <button onclick="pauseTimer()">暂停</button>
+                    <button onclick="resetTimer()">重置</button>
+                </div>
+            </div>
+             <!-- 学习记录时间轴 -->
+            <div class="timeline">
+                <h3>学习记录时间轴</h3>
+                <div id="timelineRecords"></div>
+            </div>
+        </div>
+
+        <div class="row">
+            <!-- 学习积分 -->
+            <div class="section">
+                <h3>学习积分</h3>
+                <p>数据截至：<span id="currentTime"></span></p>
+                <p>当前已累计得分：<span id="points">0</span> 分</p>
+                <div>
+                    <button id="redeemButton" onclick="redeem()">兑换情书</button>
+                </div>
+            </div>
+
+            <!-- 成就墙 -->
+            <div class="section">
+                <h3>泉泉的成就墙</h3>
+                <p>已累计学习：<span id="totalTime">0</span> 分钟</p>
+                <p>已累计完成番茄钟次数：<span id="totalPomodoros">0</span> 次</p>
+                <p>已完成学习目标：<span id="totalGoals">0</span> 个</p>
+                <p>已收获情书：<span id="letters">0</span> 封</p>
+            </div>
+        </div>
     </div>
 
-    <div class="container">
-        <!-- 阿湛的主页 -->
-        <div class="profile">
-            <input type="file" id="asamiAvatarInput" style="display: none;" accept="image/*" onchange="uploadAvatar('asami')">
-            <img id="asamiAvatar" src="default-avatar.jpg" alt="阿湛头像" onclick="document.getElementById('asamiAvatarInput').click()">
-            <h2>阿湛的主页</h2>
-            <p id="asamiSignature">独属于泉泉的阿湛</p>
-            <textarea id="asamiNewDynamic" placeholder="帮阿湛更新动态吧～"></textarea>
-            <button onclick="addDynamic('asami')">发布动态</button>
-            <div class="music-player">
-                <h3>音乐播放器</h3>
-                <audio id="asamiMusic" controls>
-                    <source src="" type="audio/mp3">
-                </audio>
-                <input type="file" accept="audio/*" onchange="uploadMusic(this, 'asamiMusic', 'asami')">
-            </div>
-            <div class="dynamic-section" id="asamiDynamics">
-                <!-- 动态更新 -->
-            </div>
-        </div>
-        <!-- 泉泉的主页 -->
-        <div class="profile">
-            <input type="file" id="izumiAvatarInput" style="display: none;" accept="image/*" onchange="uploadAvatar('izumi')">
-            <img id="izumiAvatar" src="default-avatar.jpg" alt="泉泉头像" onclick="document.getElementById('izumiAvatarInput').click()">
-            <h2>泉泉的主页</h2>
-            <p id="asamiSignature">明日春来到</p>
-            <textarea id="izumiNewDynamic" placeholder="分享你的动态吧～"></textarea>
-            <button onclick="addDynamic('izumi')">发布动态</button>
-            <div class="music-player">
-                <h3>音乐播放器</h3>
-                <audio id="izumiMusic" controls>
-                    <source src="" type="audio/mp3">
-                </audio>
-                <input type="file" accept="audio/*" onchange="uploadMusic(this, 'izumiMusic', 'izumi')">
-            </div>
-            <div class="dynamic-section" id="izumiDynamics">
-                <!-- 动态更新 -->
-            </div>
-        </div>
+    <!-- 跳转索引 -->
+    <div class="index">
+        <a href="#timeline">时间线</a>
+        <a href="#profile">个人主页</a>
+        <a href="#notebook">记事本</a>
     </div>
 
     <script>
-        const dynamics = JSON.parse(localStorage.getItem("dynamics")) || { asami: [], izumi: [] };
-        const avatars = JSON.parse(localStorage.getItem("avatars")) || { asami: "default-avatar.jpg", izumi: "default-avatar.jpg" };
-        const music = JSON.parse(localStorage.getItem("music")) || { asami: "", izumi: "" };
+        let interval;
+        let time = 25 * 60;
+        let points = parseInt(localStorage.getItem("points")) || 0;
+        let totalPomodoros = parseInt(localStorage.getItem("totalPomodoros")) || 0;
+        let letters = parseInt(localStorage.getItem("letters")) || 0;
+        let totalTime = parseInt(localStorage.getItem("totalTime")) || 0;
+        let goalsCompleted = parseInt(localStorage.getItem("totalGoals")) || 0;
+        let timelineRecords = JSON.parse(localStorage.getItem("timelineRecords") || "[]");
 
-        function uploadAvatar(user) {
-            const input = document.getElementById(`${user}AvatarInput`);
-            const file = input.files[0];
-            if (file) {
-                const url = URL.createObjectURL(file);
-                document.getElementById(`${user}Avatar`).src = url;
-                avatars[user] = url;
-                localStorage.setItem("avatars", JSON.stringify(avatars));
-            }
+        function updateTimerDisplay() {
+            const minutes = Math.floor(time / 60).toString().padStart(2, '0');
+            const seconds = (time % 60).toString().padStart(2, '0');
+            document.getElementById("timer").innerText = `${minutes}:${seconds}`;
         }
 
-        function uploadMusic(input, playerId, user) {
-            const file = input.files[0];
-            if (file) {
-                const url = URL.createObjectURL(file);
-                document.getElementById(playerId).src = url;
-                music[user] = url;
-                localStorage.setItem("music", JSON.stringify(music));
-            }
+        function startTimer() {
+            const goal = prompt("请输入本次学习目标：");
+            if (!goal) return alert("学习目标不能为空！");
+            goalsCompleted++;
+            updateStats();
+            const startTime = time; // 保存初始时间
+            interval = setInterval(() => {
+                if (time > 0) {
+                    time--;
+                    updateTimerDisplay();
+                } else {
+                    clearInterval(interval);
+                    alert("时间到！请记录学习内容。");
+                    addSparkle();
+                    const review = prompt("请输入学习感悟：");
+                    const minutesStudied = Math.round(startTime / 60);
+                    saveTimelineRecord(goal, review, minutesStudied);
+                    totalTime += minutesStudied; // 动态更新学习时间
+                    points++; // 每次完成都计入积分
+                    totalPomodoros++; // 计入完成次数
+                    updateStats();
+                }
+            }, 1000);
         }
 
-        function addDynamic(user) {
-            const textarea = document.getElementById(`${user}NewDynamic`);
-            const content = textarea.value.trim();
-            if (content) {
-                dynamics[user].push({ content, timestamp: new Date().toLocaleString(), comments: [] });
-                localStorage.setItem("dynamics", JSON.stringify(dynamics));
-                renderDynamics(user);
-                textarea.value = "";
+        function pauseTimer() {
+            clearInterval(interval);
+        }
+
+        function resetTimer() {
+            clearInterval(interval);
+            time = 25 * 60;
+            updateTimerDisplay();
+        }
+
+        function setCustomTime() {
+            const customTime = parseInt(document.getElementById("customTime").value);
+            if (customTime && customTime > 0) {
+                time = customTime * 60;
+                updateTimerDisplay();
             } else {
-                alert("内容不能为空！");
+                alert("请输入有效的分钟数！");
             }
         }
 
-        function renderDynamics(user) {
-            const dynamicSection = document.getElementById(`${user}Dynamics`);
-            dynamicSection.innerHTML = dynamics[user]
-                .map((dynamic, index) => `
-                    <div class="dynamic">
-                        <button onclick="deleteDynamic('${user}', ${index})">删除动态</button>
-                        <p>${dynamic.content}</p>
-                        <small>${dynamic.timestamp}</small>
-                        <div class="comment-section">
-                            ${dynamic.comments.map((comment, cIndex) => `
-                                <p>
-                                    <b>${comment.name}:</b> ${comment.text}
-                                    <button onclick="deleteComment('${user}', ${index}, ${cIndex})">删除</button>
-                                </p>
-                            `).join("")}
-                            <button onclick="addComment('${user}', ${index})">留言</button>
-                        </div>
-                    </div>
-                `)
-                .join("");
+        function saveTimelineRecord(goal, review, minutes) {
+            const record = { time: new Date().toLocaleString(), goal, review, minutes };
+            timelineRecords.push(record);
+            localStorage.setItem("timelineRecords", JSON.stringify(timelineRecords));
+            renderTimeline();
         }
 
-        function deleteDynamic(user, index) {
-            if (confirm("确定要删除这条动态吗？")) {
-                dynamics[user].splice(index, 1);
-                localStorage.setItem("dynamics", JSON.stringify(dynamics));
-                renderDynamics(user);
-            }
+        function renderTimeline() {
+            const timeline = document.getElementById("timelineRecords");
+            timeline.innerHTML = timelineRecords.map(
+                (record) => `<p>${record.time} - 目标: ${record.goal} - 感悟: ${record.review} - ${record.minutes}分钟</p>`
+            ).join("");
         }
-        function deleteComment(user, index, cIndex) {
-            if (confirm("确定要删除这条留言吗？")) {
-                dynamics[user][index].comments.splice(cIndex, 1);
-                localStorage.setItem("dynamics", JSON.stringify(dynamics));
-                renderDynamics(user);
-            }
-        }
-
-        function addComment(user, index) {
-            const name = prompt("请输入你的昵称：");
-            const text = prompt("请输入留言内容：");
-            if (name && text) {
-                dynamics[user][index].comments.push({ name, text });
-                localStorage.setItem("dynamics", JSON.stringify(dynamics));
-                renderDynamics(user);
+        function redeem() {
+            if (points >= 30) {
+                letters++;
+                points -= 30;
+                const loveLetters = [
+                    "这是阿湛为泉泉的第1封小情书~",
+                    "每完成一次，你离梦想更近~",
+                    "深情等待泉泉完成！",
+                ];
+                const content = loveLetters[letters - 1] || "未来更多情书等你解锁！";
+                alert(content);
+                updateStats();
             } else {
-                alert("昵称和留言内容不能为空！");
+                alert("积分不足，快去完成番茄钟吧！");
             }
+        }
+
+        function updateStats() {
+            document.getElementById("totalTime").innerText = totalTime;
+            document.getElementById("totalPomodoros").innerText = totalPomodoros;
+            document.getElementById("letters").innerText = letters;
+            document.getElementById("points").innerText = points;
+            document.getElementById("currentTime").innerText = new Date().toLocaleString();
+
+            localStorage.setItem("totalTime", totalTime);
+            localStorage.setItem("totalPomodoros", totalPomodoros);
+            localStorage.setItem("letters", letters);
+            localStorage.setItem("points", points);
+            localStorage.setItem("totalGoals", goalsCompleted);
+        }
+
+        function addSparkle() {
+            const sparkle = document.createElement("div");
+            sparkle.className = "sparkle";
+            sparkle.style.left = `${Math.random() * window.innerWidth}px`;
+            document.body.appendChild(sparkle);
+            setTimeout(() => sparkle.remove(), 2000);
         }
 
         window.onload = () => {
-            // 加载头像
-            document.getElementById("asamiAvatar").src = avatars.asami;
-            document.getElementById("izumiAvatar").src = avatars.izumi;
-
-            // 加载音乐
-            if (music.asami) document.getElementById("asamiMusic").src = music.asami;
-            if (music.izumi) document.getElementById("izumiMusic").src = music.izumi;
-
-            // 加载动态
-            renderDynamics("asami");
-            renderDynamics("izumi");
+            updateStats();
+            renderTimeline();
+            updateTimerDisplay();
         };
     </script>
 </body>
