--- a/notebook.html
+++ b/notebook.html
@@ -31,45 +31,22 @@
             border-radius: 10px;
         }
 
-        .left-panel h2 {
-            text-align: center;
-        }
-
         .right-panel {
             flex: 2;
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
-            overflow-y: auto;
-            max-height: 600px;
         }
 
-        .record {
-            margin-bottom: 20px;
-            background: rgba(230, 230, 230, 0.9);
-            padding: 15px;
+        textarea {
+            width: 100%;
+            height: 150px;
+            margin-bottom: 10px;
+            padding: 10px;
             border-radius: 5px;
-            position: relative;
-        }
-
-        .record button {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background: #a03a53;
-            color: white;
             border: none;
-            border-radius: 5px;
-            padding: 5px;
-            cursor: pointer;
-        }
-
-        .record button:hover {
-            background: #D9B1BD;
-        }
-
-        .file-upload {
-            margin-top: 10px;
+            resize: none;
+            font-size: 1em;
         }
 
         button {
@@ -83,6 +60,14 @@
 
         button:hover {
             background-color: #a03a53;
+        }
+
+        select, input {
+            margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 5px;
+            border: none;
+            font-size: 1em;
         }
 
         /* 索引样式 */
@@ -112,7 +97,7 @@
     </style>
 </head>
 <body>
- <!-- 索引 -->
+    <!-- 索引 -->
     <div class="index">
         <a href="timeline.html">时间线</a>
         <a href="pomodoro.html">番茄钟</a>
@@ -122,80 +107,61 @@
     <div class="container">
         <!-- 左侧面板 -->
         <div class="left-panel">
-            <h2>添加记录</h2>
-            <textarea id="recordContent" placeholder="写下你的记录吧～"></textarea>
+            <h2>创建新记录</h2>
             <select id="category">
                 <option value="一些">一些</option>
                 <option value="和阿湛">和阿湛</option>
                 <option value="秘">秘</option>
             </select>
-            <input type="file" id="fileUpload" class="file-upload" accept="image/*,video/*">
-            <button onclick="addRecord()">保存记录</button>
+            <textarea id="content" placeholder="写下你的内容吧～"></textarea>
+            <input type="file" id="fileUpload" accept="image/*,video/*">
+            <button onclick="saveRecord()">保存记录</button>
         </div>
-
         <!-- 右侧面板 -->
-        <div class="right-panel" id="records">
-            <h2>记录详情</h2>
+        <div class="right-panel">
+            <h2>预览与保存</h2>
+            <div id="preview"></div>
         </div>
     </div>
 
     <script>
-        const records = JSON.parse(localStorage.getItem("records")) || [];
-
-        function addRecord() {
-            const content = document.getElementById("recordContent").value.trim();
+        function saveRecord() {
             const category = document.getElementById("category").value;
+            const content = document.getElementById("content").value.trim();
             const fileInput = document.getElementById("fileUpload");
             let fileUrl = "";
-
-            if (fileInput.files[0]) {
-                fileUrl = URL.createObjectURL(fileInput.files[0]);
-            }
 
             if (category === "秘" && prompt("请输入密码：") !== "mysweetdoggyDDLG") {
                 alert("密码错误！");
                 return;
             }
 
+            if (fileInput.files[0]) {
+                fileUrl = URL.createObjectURL(fileInput.files[0]);
+            }
+
             if (content) {
-                records.push({ content, category, fileUrl, timestamp: new Date().toLocaleString() });
-                localStorage.setItem("records", JSON.stringify(records));
-                renderRecords();
-                document.getElementById("recordContent").value = "";
-                document.getElementById("fileUpload").value = "";
+                const timestamp = new Date().toLocaleString();
+                const recordContent = `时间: ${timestamp}\n分类: ${category}\n内容: ${content}\n${
+                    fileUrl ? `附件: ${fileUrl}` : ""
+                }`;
+
+                const blob = new Blob([recordContent], { type: "text/plain" });
+                const fileName = `记录_${timestamp.replace(/[\s:]/g, "_")}.txt`;
+                const link = document.createElement("a");
+                link.href = URL.createObjectURL(blob);
+                link.download = fileName;
+                link.innerText = `下载 ${fileName}`;
+                link.style.display = "block";
+
+                const preview = document.getElementById("preview");
+                preview.appendChild(link);
+
+                alert("记录保存成功！");
             } else {
-                alert("记录内容不能为空！");
+                alert("内容不能为空！");
             }
         }
-
-        function deleteRecord(index) {
-            if (confirm("确定要删除这条记录吗？")) {
-                records.splice(index, 1);
-                localStorage.setItem("records", JSON.stringify(records));
-                renderRecords();
-            }
-        }
-
-        function renderRecords() {
-            const recordContainer = document.getElementById("records");
-            recordContainer.innerHTML = `<h2>记录详情</h2>`;
-            records.forEach((record, index) => {
-                if (record.category === "秘" && prompt("请输入密码以查看记录：") !== "mysweetdoggyDDLG") {
-                    return;
-                }
-
-                recordContainer.innerHTML += `
-                    <div class="record">
-                        <button onclick="deleteRecord(${index})">删除</button>
-                        <p>${record.content}</p>
-                        ${record.fileUrl ? `<img src="${record.fileUrl}" style="max-width:100%;" />` : ""}
-                        <small>${record.timestamp} - 分类: ${record.category}</small>
-                    </div>
-                `;
-            });
-        }
-
-        window.onload = renderRecords;
     </script>
 </body>
 </html>
