--- a/notebook.html
+++ b/notebook.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>梦是榛果巧克力</title>
+    <title>Note Book</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Copperplate&display=swap');
+
         body {
             font-family: "Microsoft Yahei", sans-serif;
             background-image: url('background.3.jpg');
@@ -13,218 +15,233 @@
             margin: 0;
             padding: 0;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
+            min-height: 100vh;
+        }
+
+        .container {
+            text-align: center;
+            width: 80%;
+            padding: 20px;
         }
 
         h1 {
+            font-family: 'Copperplate', serif;
             color: #D9B1BD;
-            margin: 20px 0;
-            font-size: 2.5em;
+            font-size: 3em;
+            margin-bottom: 10px;
         }
 
-        .heart-box {
+        .heart {
             position: relative;
-            background: rgba(217, 177, 189, 0.2);
-            border: 2px solid #D9B1BD;
-            border-radius: 50%;
-            width: 200px;
-            height: 200px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-
-        .heart-box h2 {
-            color: #D9B1BD;
-            font-size: 2em;
-            margin: 0;
-        }
-
-        .heart-box small {
-            color: #333;
-        }
-
-        .bone-box {
-            background: rgba(230, 230, 230, 0.7);
-            padding: 20px;
-            border-radius: 30px;
-            display: flex;
-            justify-content: space-between;
-            width: 60%;
-            margin-bottom: 30px;
-        }
-
-        .bone-box a {
-            text-decoration: none;
-            color: #7b2a3f;
+            display: inline-block;
+            background: rgba(255, 192, 203, 0.8);
+            width: 120px;
+            height: 120px;
+            clip-path: polygon(50% 0%, 100% 37%, 82% 100%, 50% 80%, 18% 100%, 0% 37%);
+            text-align: center;
+            line-height: 140px;
+            margin: 0 auto 20px auto;
             font-size: 1.2em;
-            padding: 10px 20px;
-            background: rgba(255, 255, 255, 0.8);
-            border-radius: 15px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            color: #fff;
         }
 
-        .bone-box a:hover {
+        .heart::after {
+            content: "🎀";
+            font-size: 1.5em;
+            position: absolute;
+            top: 90%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #f7f3e9;
+        }
+
+        .indexes {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+
+        .indexes a {
+            display: block;
+            width: 80px;
+            height: 40px;
+            line-height: 40px;
+            background: rgba(230, 230, 230, 0.8);
+            border-radius: 10px;
+            text-decoration: none;
+            color: #333;
+            font-size: 1em;
+            text-align: center;
+        }
+
+        .indexes a:hover {
+            background: #D9B1BD;
+            color: white;
+        }
+
+        /* 骨头形索引按钮 */
+        .bone {
+            background: rgba(230, 230, 230, 0.8);
+            clip-path: polygon(10% 50%, 20% 30%, 50% 10%, 80% 30%, 90% 50%, 80% 70%, 50% 90%, 20% 70%);
+            width: 100px;
+            height: 40px;
+            line-height: 40px;
+            color: #333;
+            text-align: center;
+            margin: 0 auto;
+            cursor: pointer;
+        }
+
+        .bone:hover {
             background: #D9B1BD;
             color: white;
         }
 
         .qa-section {
-            background: rgba(255, 255, 255, 0.8);
-            padding: 20px;
-            border-radius: 10px;
-            width: 60%;
-            margin-bottom: 50px;
+            margin-top: 30px;
         }
 
         .qa-section textarea {
-            width: 100%;
+            width: 80%;
             height: 60px;
-            margin-bottom: 10px;
-            border-radius: 5px;
-            border: 1px solid #D9B1BD;
-            font-size: 1em;
             padding: 10px;
+            margin-top: 10px;
+            border-radius: 5px;
+            border: none;
             resize: none;
+            font-size: 1em;
         }
 
-        .qa-section button {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            background: #D9B1BD;
+        button {
+            background-color: #D9B1BD;
             color: white;
             border: none;
             border-radius: 5px;
-            font-size: 1em;
+            padding: 10px;
             cursor: pointer;
         }
 
-        .qa-section button:hover {
-            background: #a03a53;
+        button:hover {
+            background-color: #a03a53;
         }
 
         .qa-list {
             margin-top: 20px;
+            text-align: left;
         }
 
-        .qa-list p {
+        .qa-item {
             background: rgba(230, 230, 230, 0.9);
             padding: 10px;
-            border-radius: 5px;
             margin-bottom: 10px;
+            border-radius: 5px;
             position: relative;
         }
 
-        .qa-list button {
+        .qa-item button {
             position: absolute;
             top: 10px;
             right: 10px;
-            background: #a03a53;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 5px;
-            cursor: pointer;
         }
 
-        .qa-list button:hover {
-            background: #D9B1BD;
+        .qa-item small {
+            display: block;
+            font-size: 0.8em;
+            color: #666;
         }
-
-        .stars {
+         /* 动态特效 */
+        .sparkle {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-        }
-
-        .star {
-            position: absolute;
-            background: #fff;
+            top: -50px;
+            width: 20px;
+            height: 20px;
+            background: rgba(255, 223, 0, 0.8);
             border-radius: 50%;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
-            animation: fall 2s infinite;
+            box-shadow: 0 0 10px rgba(255, 223, 0, 0.8);
+            animation: fall 2s ease-in-out forwards;
         }
 
         @keyframes fall {
-            from {
-                transform: translateY(-50px) translateX(0);
+            0% {
+                transform: translateY(0) translateX(0);
                 opacity: 1;
             }
-            to {
-                transform: translateY(100vh) translateX(50px);
+            100% {
+                transform: translateY(800px) translateX(200px);
                 opacity: 0;
             }
         }
     </style>
 </head>
 <body>
-    <h1>Note Book</h1>
-    <div class="heart-box">
-         <h2>100 天</h2>
-        <small>开始于 2023-12-30</small>
-    </div>
-    <div class="bone-box">
-        <a href="some.html">一些</a>
-        <a href="asami.html">和阿湛</a>
-        <a href="secret.html" onclick="enterPassword()">秘</a>
-    </div>
-    <div class="qa-section">
-        <textarea id="qaInput" placeholder="请输入您的问题..."></textarea>
-        <button onclick="addQuestion()">发布问题</button>
+    <div class="container">
+        <h1>Note Book</h1>
+        <div class="heart">
+            100 天
+            <small>开始于2023年12月30日</small>
+        </div>
+        <div class="indexes">
+            <div class="bone">一些</div>
+            <div class="bone">和阿湛</div>
+            <div class="bone">秘</div>
+        </div>
+        <div class="qa-section">
+            <textarea id="qaInput" placeholder="输入你的问题..."></textarea>
+            <button onclick="addQA()">发布问题</button>
+        </div>
         <div class="qa-list" id="qaList">
-            <!-- Q&A 区域 -->
+            <!-- 问题列表 -->
         </div>
     </div>
-    <div class="stars" id="stars"></div>
 
     <script>
-        function enterPassword() {
-            const password = prompt("请输入密码进入秘区域：");
-            if (password !== "mysweetdoggyDDLG") {
-                alert("密码错误！");
-                return false;
-            }
-            return true;
-        }
+        let qaList = JSON.parse(localStorage.getItem("qaList")) || [];
 
-        function addQuestion() {
+        function addQA() {
             const input = document.getElementById("qaInput");
-            const list = document.getElementById("qaList");
-            const text = input.value.trim();
-            if (text) {
-                const question = document.createElement("p");
-                question.innerHTML = `Q${list.childElementCount + 1}: ${text} 
-                <button onclick="this.parentElement.remove()">删除</button>`;
-                list.appendChild(question);
+            const question = input.value.trim();
+            if (question) {
+                qaList.push({ question, timestamp: new Date().toLocaleString(), comments: [] });
+                localStorage.setItem("qaList", JSON.stringify(qaList));
+                renderQA();
                 input.value = "";
             } else {
                 alert("问题不能为空！");
             }
         }
 
-        // 流星特效
-        function addStars() {
-            const stars = document.getElementById("stars");
-            for (let i = 0; i < 50; i++) {
-                const star = document.createElement("div");
-                star.className = "star";
-                star.style.width = `${Math.random() * 3}px`;
-                star.style.height = star.style.width;
-                star.style.top = `${Math.random() * 100}vh`;
-                star.style.left = `${Math.random() * 100}vw`;
-                star.style.animationDuration = `${Math.random() * 2 + 1}s`;
-                stars.appendChild(star);
+        function renderQA() {
+            const list = document.getElementById("qaList");
+            list.innerHTML = qaList
+                .map(
+                    (item, index) =>
+                        `<div class="qa-item">
+                            <p>${item.question}</p>
+                            <small>${item.timestamp}</small>
+                            <button onclick="addComment(${index})">留言</button>
+                        </div>`
+                )
+                .join("");
+        }
+
+        function addComment(index) {
+            const name = prompt("请输入你的昵称：");
+            const comment = prompt("请输入留言内容：");
+            if (name && comment) {
+                qaList[index].comments.push({ name, comment });
+                localStorage.setItem("qaList", JSON.stringify(qaList));
+                renderQA();
+            } else {
+                alert("昵称和留言不能为空！");
             }
         }
 
-        addStars();
+        window.onload = () => {
+            renderQA();
+        };
     </script>
 </body>
 </html>
